# objcurses-orbit

./: CMakeLists.txt  LICENSE.md  README.md  config.h  main.cpp  package.sh
entities/geometry/: object.h
entities/rendering/: buffer.cpp  buffer.h  renderer.cpp  renderer.h
entities/view/: camera.h  light.h
utils/: algorithms.cpp  algorithms.h  mathematics.h
