#CMakeLists.txt

cmake_minimum_required(VERSION 3.22) project(objcurses)

    set(CMAKE_CXX_STANDARD 20)

#address sanitizer
        option(SANITIZE "enable AddressSanitizer with extended checks" OFF)

            if (SANITIZE) message(STATUS "AddressSanitizer enabled") set(
                ASAN_FLAGS "-fsanitize=address -fno-omit-frame-pointer -g")
                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ASAN_FLAGS}") set(
                    CMAKE_EXE_LINKER_FLAGS
                    "${CMAKE_EXE_LINKER_FLAGS} ${ASAN_FLAGS}")

#embed runtime ASAN options into binary
                    add_compile_definitions(
                        ASAN_OPTIONS =
                            "detect_leaks=1:strict_string_checks=1:check_"
                            "initialization_order=1:detect_stack_use_after_"
                            "return=1:detect_container_overflow=1:abort_on_"
                            "error=1") endif()

#collect all source files recursively, excluding build directory
                        file(
                            GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
                            "${CMAKE_SOURCE_DIR}/*.cpp") list(FILTER SOURCES
                                                                  EXCLUDE REGEX
                                                              ".*/.*build.*/.*")

#creating executable
                            add_executable(${PROJECT_NAME} ${
                                SOURCES}) target_include_directories(${
                                PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR})

#linking ncurses library
                                find_package(
                                    Curses REQUIRED) target_link_libraries(${
                                    PROJECT_NAME} PRIVATE ${
                                    CURSES_LIBRARIES}) target_include_directories(${
                                    PROJECT_NAME} PRIVATE ${CURSES_INCLUDE_DIR})

#linking math library
                                    target_link_libraries(${
                                        PROJECT_NAME} PRIVATE m)

#install rules
                                        include(GNUInstallDirs)

                                            install(
                                                TARGETS ${PROJECT_NAME} RUNTIME
                                                    DESTINATION ${
                                                        CMAKE_INSTALL_BINDIR})

                                                install(
                                                    FILES LICENSE.md DESTINATION
                                                        ${CMAKE_INSTALL_DATADIR} /
                                                    licenses / ${PROJECT_NAME})
